# policyvibes

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/compliance/credential-extraction/: SKILL.md  examples.md
.claude/skills/compliance/credential-extraction/reference/: patterns.py
.claude/skills/compliance/header-spoofing/: SKILL.md  examples.md
.claude/skills/compliance/header-spoofing/reference/: patterns.py
.claude/skills/compliance/oauth-token-abuse/: SKILL.md  examples.md
.claude/skills/compliance/oauth-token-abuse/reference/: patterns.py
.claude/skills/compliance/subscription-routing/: SKILL.md  examples.md
.claude/skills/compliance/subscription-routing/reference/: patterns.py
docs/: NEW_SKILLS_SPECIFICATION.md
docs/proposals/: IMPLEMENTATION_PLAN.md  PRIVACY_VIOLATION_SUBAGENT_PROPOSAL.md
src/policyvibes/: __init__.py  agent.py  cli.py  detector.py  models.py
src/policyvibes/patterns/: __init__.py  detector.py
src/policyvibes/prompts/: main.txt
src/policyvibes/skills/: __init__.py  base.py
src/policyvibes/skills/anthropic/: SKILL.md  __init__.py  patterns.py
src/policyvibes/tools/: __init__.py  pattern_scan.py
tests/: __init__.py  test_agent.py  test_cli.py  test_detector.py  test_patterns.py
