[project]
name = "policyvibes"
version = "0.2.0"
description = "Claude Agent SDK-based ToS violation detection agent"
authors = [
    {name = "Anshuman Bhartiya"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1,<9.0.0",
    "rich>=14.2.0,<15.0.0",
]

[project.optional-dependencies]
sdk = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
policyvibes = "policyvibes.cli:main"

[tool.poetry]
packages = [{include = "policyvibes", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
